COMS20001/.metadata/.plugins/org.eclipse.cdt.ui/game_of_life.build.log
15:59:46 **** Incremental Build of configuration Default for project game_of_life ****
xmake all 
Checking build modules
Using build modules: lib_i2c(3.0.0) lib_logging(2.0.0) lib_xassert(2.0.0)
Analyzing main.xc
../src/main.xc:96:19: error: unknown function identifier `parsePixelsToInt' (possibly missing prototype?)
      processGame(parsePixelsToInt(), rowChannels[(i+1)%PROCESS_THREAD_COUNT], rowChannels[(i+PROCESS_THREAD_COUNT-1)%PROCESS_THREAD_COUNT]);
                  ^
../src/main.xc:76:9: warning: unused variable `val' [-Wunused-variable]
  uchar val;
        ^~~
../src/main.xc:101:1: error: pointer return type must be marked movable, alias or unsafe
int* parsePixelsToInt() {
^~~~~~~~~~~~~~~~~~~~~~~
../src/main.xc:103:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
../src/main.xc:189:9: warning: unused variable `num' [-Wunused-variable]
    int num = 1 << 1;
        ^~~
xmake[1]: *** [.build/src/main.xc.pca.xml.decouple] Error 1
xmake: *** [analyze] Error 2

15:59:47 Build Finished (took 932ms)

